@@ -11,7 +11,7 @@
 	<div id="header"></div>
 	<div id="main_text"><br />
 	  <div id="main_help">
-		<strong>ClanSphere 2007 - 2009</strong>
+		<strong>ClanSphere 2010</strong>
 		<ul>
 		  <li><a href="#vorraussetzungen">Voraussetzungen</a></li>
 		  <li><a href="#installation">Installation</a></li>
@@ -44,7 +44,7 @@
 		  </tr>
 		  <tr>
 		    <td colspan="2">- Webspace (m&ouml;glichst mit FTP-Zugang)<br />
-				  - PHP 4.3.0 oder eine neuere Version auf dem Webserver<br />
+				  - PHP 5.0 oder eine neuere Version auf dem Webserver<br />
 				  - Eine der folgenden Datenbanken (Dabei unterst&uuml;tze PHP-Erweiterungen):<br />
 					-- MySQL ab 4.0 (mysql, mysqli, pdo_mysql)<br />
 					-- PostgreSQL ab 8.1 (pgsql, pdo_pgsql)<br />
@@ -295,7 +295,7 @@
 		  </td></tr>
 		</table>
 		<table cellspacing="0" cellpadding="2" width="100%">
-		  <tr><td style="float:right; font-size: 8pt;"><i>Letzte Aktualisierung: 18.02.2009</i></td></tr>
+		  <tr><td style="float:right; font-size: 8pt;"><i>Letzte Aktualisierung: 31.05.2010</i></td></tr>
 		</table>
 	</div>
 	<div id="footer">Copyright 2007-2009 clansphere.net. All rights reserved.</div>	
