@@ -36,8 +36,6 @@ $cs_lang['fsockoff'] .= 'The function <strong>fsockopen</strong> is deactivated 
 $cs_lang['fsockoff'] .= 'To view the serverview, it is necessary to activate the function.<br />';
 $cs_lang['fsockoff'] .= 'To activate the function, delete the line <strong>disable_functions = fsockopen</strong> in the php.ini file.';
 $cs_lang['fsockoff'] .= '<br /><b>Live-Status is not possible!</b>';
-$cs_lang['php'] = '<strong>An error occurred:</strong><br />';
-$cs_lang['php'] .= 'Update you PHP Version to use the Serverview.<br />';
 $cs_lang['headline'] = 'Servername';
 $cs_lang['new_serv'] = 'New Server';
 $cs_lang['number'] = 'Number: ';
