@@ -1,8 +1,0 @@
-<table class="forum" cellpadding="0" cellspacing="{page:cellspacing}" style="width:{page:width}">
-  <tr>
-    <td class="headb">{lang:mod_name}</td>
-  </tr>
-  <tr>
-    <td class="leftb">{lang:php}</td>
-  </tr>
-</table>
